# miee

./: .env.example  .gitignore  .pre-commit-config.yaml  00_IMPLEMENTATION_GUIDE.md  00_SCIENTIFIC_DESIGN_VERIFICATION.md  01_CONFIDENCE_MODEL_UNIFICATION.md  01_STATISTICAL_RIGOR_SPECIFICATION.md  02_METRIC_FORMAL_SPECIFICATION.md  03_OBSERVATION_ARCHITECTURE_V2.md  05_METRIC_VALIDATION_FRAMEWORK.md  06_OBSERVATION_GRAPH_EVOLUTION.md  07_STREAMING_ANALYSIS_ARCHITECTURE.md  08_AI_GENERATED_ACTIVITY_DETECTION.md  09_STATISTICAL_VALIDATION_PLAN.md  10_RESEARCH_LIMITATIONS_AND_THREATS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIDENCE_FORENSIC_TRACE.md  CONTRIBUTING.md  CRITICAL_INVESTIGATION_BASELINE.md  DAY_7_REQUIREMENT_MATRIX.md  Dockerfile  EXPLANATION_ENGINE_AUDIT.md  LICENSE  MEMORY.md  MIIE_CRITICAL_RUNTIME_RECOVERY_PACKAGE.md  MIIE_V1_GOLD_RELEASE_PACKAGE.md  MISSING_DATA_POLICY_AUDIT.md  Makefile  README.md  RESEARCH_TRACK_AUDIT.md  ROOT_CAUSE_CLASSIFICATION.md  SECURITY.md  demo_check_api.py  demo_full_pipeline.py  docker-compose.yml  error_contracts_test.py  error_contracts_test2.py  (+7 more)
.autoresearch/metrics/: config.cfg  loop.json  program.md  results.tsv  start_loop.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
archive/: .coverage  FERA_LOOP_STATE.json  day15_loop.json
archive/dry_run_output/: analysis_report_20230615_120000.json  evidence.json  run_metrics.json
archive/test_output_dryrun/: analysis_report_20230615_120000.json  analysis_report_20230615_120000.md  dry_run_report.md  manifest.json  metrics.csv  results.json
benchmarks/: README.md  candidate_acceptance_criteria.md  metric_availability_matrix.md  repository_fixture_requirements.md  run_evaluation.py  update_manifest.py  validate_targets.py
benchmarks/annotations/: annotation_workflow.md
benchmarks/calibration/: __init__.py  run_calibration.py  run_threshold_calibration.py  synthetic_data.py
benchmarks/ground_truth/: ground_truth.py  index.json
benchmarks/matrices/: detector_benchmark_matrix.json  metric_benchmark_matrix.json
benchmarks/metadata/: candidate_manifest.json
benchmarks/pr14/: check_detectors.py  check_report.py  check_results.py  fix_catalogue.py  merge_results.py  repository_catalogue.py  run_benchmark.py  run_fix.py  run_replacements.py  smoke_test.py  test_pipeline.py  test_top5.py  test_validation.py
benchmarks/results/: D-02_evaluation.json  benchmark_summary.json
benchmarks/runners/: __init__.py
benchmarks/taxonomy/: repository_taxonomy.json
benchmarks/v2/: generate_and_verify.py  stress_test.py
demo_output/: analysis_report_20260624_015356.json  analysis_report_20260624_015356.md  analysis_report_20260624_015428.json  analysis_report_20260624_015428.md  manifest.json
docs/: API_GUIDE.md  CLI_GUIDE.md  DIRECTORY_NORMALIZATION_REPORT.md  DOCUMENT_CLASSIFICATION_MATRIX.md  DOCUMENT_INDEX.md  FINAL_REPOSITORY_CERTIFICATION.md  INSTALLATION.md  MIIE_Repository_Benchmark_Catalogue.md  PHASE6_PERFORMANCE_MEASUREMENT.md  REPOSITORY_STRUCTURE.md  TROUBLESHOOTING.md  architecture.md  cli_reference.md  configuration.md  day_0_completion_checklist.md  day_10_review.md  day_1_execution.md  day_2_execution.md  getting_started.md  metric_requirements.md  metrics.md  monitoring_setup_guide.md  openapi.json  release_notes_v1.0.0.md  scalability_remediation.md
docs/adr/: ADR-001-project-foundations.md  ADR-002-layered-architecture.md
docs/architecture/: ADR-003-cli-api-pipeline-bypass.md  FROZEN_CORE_RATIONALE.md  RELEASE_BASELINE.md  SRP03_ARCHITECTURE_CERTIFICATION.md  dependency_rules.md  (+4 more)
examples/: README.md  analyze_github.py  analyze_local.py  batch_analysis.py  cli_usage.py  export_json.py  export_markdown.py  python_api.py
export/: export.json
memory/: day7_metric_extraction_complete.md
output/: analysis_report.json  analysis_report.md
paper/: project_paper_structure.md
reports/: PR-13A_FINAL_REPORT.md  PR-13_FINAL_CERTIFICATION.md  PR-13_FINAL_VERDICT.md  PR-13_IMPLEMENTATION_SUMMARY.md  PR-13_PHASE_3_COMPLETE.md  PR-13_SCIENTIFIC_GAP_ANALYSIS.md
research/: threats_to_validity.md
schemas/: detector_benchmark_matrix.schema.json  ground_truth_dataset.schema.json  ground_truth_entry.schema.json  metric_benchmark_matrix.schema.json
scripts/: analyze_tests.py  continue_day15.sh  debug_git.py  debug_init.py  generate_all.py  reproducibility_test.py  reproducibility_test_reporting.py  reproducibility_test_segmentation_scoring.py  test_analysis_pipeline.py  test_first_part_2.py  test_gen.py
tests/: conftest.py  e2e_all_commands.py  test_cli_usability.py  test_exit_codes.py  test_metric_engine.py  test_observation_graph.py
tmp_output/: analysis_report.json  analysis_report.md
tmp_output_ingestion/: analysis_report.json  analysis_report.md
tmp_output_ingestion2/: analysis_report.json  analysis_report.md
validation/: ivp01_runner.py
(+1354 files in other folders)
