[tool.poetry]
name = "miie"
version = "1.0.0"
description = "Measurement Integrity Intelligence Engine - A research tool for evaluating software engineering metric validity"
authors = ["MIIE Development Team"]
readme = "README.md"
repository = "https://github.com/Samragya013/miie"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.0"
scipy = "^1.12.0"
jinja2 = "3.1.2"
click = "8.1.3"
pyyaml = "6.0.1"
fastapi = "0.100.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
miie = "miie.cli:cli"
miie-api = "miie.api.server:main"
