[tool.poetry]
name = "miie"
version = "1.0.0"
description = "Measurement Integrity Intelligence Engine - A research tool for evaluating software engineering metric validity"
authors = ["MIIE Development Team"]
readme = "README.md"
repository = "https://github.com/Samragya013/miie"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.0"
scipy = "^1.12.0"
jinja2 = "3.1.2"
click = "8.1.3"
pyyaml = "6.0.1"
jsonschema = ">=4.17.0"
fastapi = "0.100.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    archive
  | scripts
  | output
  | tmp_output
  | tmp_output_ingestion
  | .git
  | .mypy_cache
  | .pytest_cache
  | __pycache__
  | benchmarks/datasets
  | benchmarks/tmp
)/
'''

[tool.isort]
profile = "black"
extend_skip = [
    "archive",
    "scripts",
    "output",
    "tmp_output",
    "tmp_output_ingestion",
    "benchmarks/datasets",
    "benchmarks/tmp",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
miie = "miie.cli:cli"
miie-api = "miie.api.server:main"
