[tool.poetry]
name = "miie"
version = "1.6.0"
description = "Measurement Integrity Intelligence Engine - A research tool for evaluating software engineering metric validity"
authors = ["MIIE Development Team"]
readme = "README.md"
repository = "https://github.com/Samragya013/miie"
documentation = "https://github.com/Samragya013/miie#readme"
license = "MIT"
keywords = ["software-engineering", "metrics", "measurement", "integrity", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [{include = "miie", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10,<3.14"
numpy = ">=1.26.0,<2.0.0"
pandas = ">=2.0.0,<3.0.0"
scipy = ">=1.12.0,<2.0.0"
jinja2 = ">=3.1.0"
click = ">=8.1.0"
pyyaml = ">=6.0"
jsonschema = ">=4.17.0"
fastapi = ">=0.100.0"
python-dotenv = ">=1.0.0"
gitpython = ">=3.1.0"
pydantic = ">=2.0.0"
rich = ">=13.0.0"
defusedxml = ">=0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
flake8-bugbear = ">=23.0.0"
mypy = ">=1.0.0"
pre-commit = ">=3.0.0"
build = ">=1.0.0"
twine = ">=5.0.0"

[tool.poetry.extras]
excel = ["pandas", "openpyxl"]
all = ["pandas", "openpyxl"]

[tool.poetry.urls]
"Homepage" = "https://github.com/Samragya013/miie"
"Repository" = "https://github.com/Samragya013/miie"
"Issues" = "https://github.com/Samragya013/miie/issues"
"Changelog" = "https://github.com/Samragya013/miie/blob/main/CHANGELOG.md"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    archive
  | scripts
  | output
  | tmp_output
  | tmp_output_ingestion
  | .git
  | .mypy_cache
  | .pytest_cache
  | __pycache__
  | benchmarks/datasets
  | benchmarks/tmp
)/
'''

[tool.isort]
profile = "black"
extend_skip = [
    "archive",
    "scripts",
    "output",
    "tmp_output",
    "tmp_output_ingestion",
    "benchmarks/datasets",
    "benchmarks/tmp",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
miie = "miie.cli:cli"
miie-api = "miie.api.server:main"
